--- a/luci/luci-theme-material-dark/luasrc/view/themes/material-dark/header.htm
+++ b/luci/luci-theme-material-dark/luasrc/view/themes/material-dark/header.htm
@@ -200,6 +200,7 @@
 	<link rel="apple-touch-icon-precomposed" href="<%=media%>/logo.png" sizes="144x144">
 
 	<link rel="stylesheet" href="<%=media%>/cascade.css">
+	<link rel="stylesheet" href="<%=media%>/color_dark.css">
 	<link rel="shortcut icon" href="<%=media%>/favicon.ico">
 	<% if node and node.css then %>
 		<link rel="stylesheet" href="<%=resource%>/<%=node.css%>">
