--- a/luci/luci-theme-material-dark/luasrc/view/themes/material-dark/footer.htm
+++ b/luci/luci-theme-material-dark/luasrc/view/themes/material-dark/footer.htm
@@ -40,12 +40,12 @@
                 </footer>
             </div>
         </div>
-
     <script>
         // thanks for Jo-Philipp Wich <jow@openwrt.org>
         var luciLocation = <%= luci.http.write_json(luci.dispatcher.context.path) %>;
     </script>
     <script src="<%=media%>/js/jquery.min.js"></script>
+    <script src="<%=media%>/js/jquery.cookie.js"></script>
     <script src="<%=media%>/js/script.js"></script>
 </body>
 </html>
